# huggingface-dl-training

./: pyproject.toml
huggingface_nlp_training/: sentiment-analysis-basic.py  text_generation_basic.py  zero_shot_classification.py
huggingface_nlp_training/dl/: conversational.py  sentence_embeddings.py  summarization.py  translation.py
